// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validation.valueError calling getError on a block provides a correct message 1`] = `
"There is a problem with the value of the element 'language'.

   Line | Content
      1 | 
      2 |       -- language
 >    3 |       eno
      4 |       -- language
      5 |     
"
`;

exports[`validation.valueError calling getError on a block providing a custom message provides a correct message 1`] = `
"a highly custom error

   Line | Content
      1 | 
      2 |       -- language
 >    3 |       eno
      4 |       -- language
      5 |     
"
`;

exports[`validation.valueError calling getError on a block providing an error function provides a correct message 1`] = `
"language can not be       eno

   Line | Content
      1 | 
      2 |       -- language
 >    3 |       eno
      4 |       -- language
      5 |     
"
`;

exports[`validation.valueError calling getError on a field provides a correct message 1`] = `
"There is a problem with the value of the element 'language'.

   Line | Content
 >    1 | language: yaml
"
`;

exports[`validation.valueError calling getError on a field providing a custom message provides a correct message 1`] = `
" a highly custom error

   Line | Content
 >    1 | language: yaml
"
`;

exports[`validation.valueError calling getError on a field providing an error function provides a correct message 1`] = `
"language can not be yaml

   Line | Content
 >    1 | language: yaml
"
`;

exports[`validation.valueError calling getError on an empty block provides a correct message 1`] = `
"There is a problem with the value of the element 'language'.

   Line | Content
      1 | 
 >    2 |       -- language
 >    3 |       -- language
      4 |     
"
`;

exports[`validation.valueError calling getError on an empty block providing a custom message provides a correct message 1`] = `
"a highly custom error

   Line | Content
      1 | 
 >    2 |       -- language
 >    3 |       -- language
      4 |     
"
`;

exports[`validation.valueError calling getError on an empty block providing an error function provides a correct message 1`] = `
"language can not be null

   Line | Content
      1 | 
 >    2 |       -- language
 >    3 |       -- language
      4 |     
"
`;

exports[`validation.valueError calling getError on an empty element provides a correct message 1`] = `
"There is a problem with the value of the element 'language'.

   Line | Content
 >    1 | language:
"
`;

exports[`validation.valueError calling getError on an empty element providing a custom message provides a correct message 1`] = `
"a highly custom error

   Line | Content
 >    1 | language:
"
`;

exports[`validation.valueError calling getError on an empty element providing an error function provides a correct message 1`] = `
"language can not be null

   Line | Content
 >    1 | language:
"
`;

exports[`validation.valueError provides a correct message 1`] = `
"'language' must be 'eno', not 'yaml'.

   Line | Content
 >    1 | language: yaml
"
`;
